* Fixed: #109 (UI scrolls off-screen sometimes in Opera) * Fixed: Opera not saving toolbar/category/info visibility toggled by keyboard

--- a/main.css
+++ b/main.css
@@ -376,6 +376,7 @@ td.disabled, label.disabled, span.disabled, div.disabled {
 	background-color: #D0D0D0;
 	float: left;
 	margin: 6px 0 0 0;
+	width: 0; /* NOTE: This fixes poor reflow under FF/IE when zooming out */
 }
 
 ul#mainInfoPane-tabs {
